--- a/style.css
+++ b/style.css
@@ -197,6 +197,43 @@ header main .product__down i {
   text-transform: uppercase;
   color: #111010;
 }
+.card-3 {
+  width: 100%;
+  background-color: #f1ebe4;
+  padding: 0 33px 26px 33px;
+}
+.card-3 h3 {
+  font-family: "DM Sans";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 48px;
+  line-height: 53px;
+  text-transform: uppercase;
+  color: #111010;
+}
+.c-3__content {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-top: 62px;
+  gap: 35px;
+  text-align: center;
+}
+.c-3__content-chaild {
+  width: 435px;
+  height: 426px;
+  background-color: rgb(176, 98, 249);
+}
+
+.c-3__content-chaild p {
+  font-family: "DM Sans";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 32px;
+  line-height: 48px;
+  color: #111010;
+  transform: translateY(47px);
+}
 
 @media (max-width: 447px) {
   header {
@@ -341,6 +378,43 @@ header main .product__down i {
   }
   .c-2__content-bottom img {
     width: 30px;
+  }
+  .card-3 {
+    width: 100%;
+    background-color: #f1ebe4;
+    padding: 0 50px 18px 50px;
+  }
+  .card-3 h3 {
+    font-family: "DM Sans";
+    font-style: normal;
+    font-weight: 400;
+    font-size: 20px;
+    line-height: 28px;
+    text-transform: uppercase;
+  }
+  .c-3__content {
+    display: flex;
+    flex-wrap: wrap;
+    margin-top: 31px;
+    gap: 18px;
+    text-align: center;
+  }
+  .c-3__content-chaild {
+    width: 100%;
+    height: 100%;
+    background-color: rgb(176, 98, 249);
+  }
+  .c-3__content-chaild img {
+    width: 100%;
+  }
+
+  .c-3__content-chaild p {
+    font-family: "DM Sans";
+    font-style: normal;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 22px;
+    transform: translateY(0px);
   }
 }
 @media (min-width: 447.1px) and (max-width: 769px) {
@@ -487,6 +561,43 @@ header main .product__down i {
   .c-2__content-bottom img {
     width: 50px;
   }
+  .card-3 {
+    width: 100%;
+    background-color: #f1ebe4;
+    padding: 0 90px 20px 90px;
+  }
+  .card-3 h3 {
+    font-family: "DM Sans";
+    font-style: normal;
+    font-weight: 400;
+    font-size: 20px;
+    line-height: 32px;
+    text-transform: uppercase;
+  }
+  .c-3__content {
+    display: flex;
+    flex-wrap: wrap;
+    margin-top: 40px;
+    gap: 30px;
+    text-align: center;
+  }
+  .c-3__content-chaild {
+    width: 100%;
+    height: 100%;
+    background-color: rgb(176, 98, 249);
+  }
+  .c-3__content-chaild img {
+    width: 100%;
+  }
+
+  .c-3__content-chaild p {
+    font-family: "DM Sans";
+    font-style: normal;
+    font-weight: 400;
+    font-size: 19px;
+    line-height: 25px;
+    transform: translateY(0px);
+  }
 }
 @media (min-width: 769.1px) and (max-width: 990px) {
   header {
@@ -625,6 +736,42 @@ header main .product__down i {
   }
   .c-2__content-bottom img {
     width: 70px;
+  }
+  .card-3 {
+    width: 100%;
+    background-color: #f1ebe4;
+    padding: 0 40px 20px 40px;
+  }
+  .card-3 h3 {
+    font-family: "DM Sans";
+    font-style: normal;
+    font-weight: 400;
+    font-size: 25px;
+    line-height: 32px;
+    text-transform: uppercase;
+  }
+  .c-3__content {
+    display: flex;
+    margin-top: 25px;
+    gap: 25px;
+    text-align: center;
+  }
+  .c-3__content-chaild {
+    width: 100%;
+    height: 100%;
+    background-color: rgb(176, 98, 249);
+  }
+  .c-3__content-chaild img {
+    width: 100%;
+  }
+
+  .c-3__content-chaild p {
+    font-family: "DM Sans";
+    font-style: normal;
+    font-weight: 400;
+    font-size: 22px;
+    line-height: 28px;
+    transform: translateY(-3px);
   }
 }
 @media (min-width: 990.1px) and (max-width: 1200px) {
@@ -765,6 +912,42 @@ header main .product__down i {
   .c-2__content-bottom img {
     width: 76px;
   }
+  .card-3 {
+    width: 100%;
+    background-color: #f1ebe4;
+    padding: 0 33px 20px 33px;
+  }
+  .card-3 h3 {
+    font-family: "DM Sans";
+    font-style: normal;
+    font-weight: 400;
+    font-size: 30px;
+    line-height: 35px;
+    text-transform: uppercase;
+  }
+  .c-3__content {
+    display: flex;
+    margin-top: 62px;
+    gap: 32px;
+    text-align: center;
+  }
+  .c-3__content-chaild {
+    width: 100%;
+    height: 100%;
+    background-color: rgb(176, 98, 249);
+  }
+  .c-3__content-chaild img {
+    width: 100%;
+  }
+
+  .c-3__content-chaild p {
+    font-family: "DM Sans";
+    font-style: normal;
+    font-weight: 400;
+    font-size: 25px;
+    line-height: 30px;
+    transform: translateY(-3px);
+  }
 }
 @media (min-width: 1200.1px) {
   header {
@@ -896,5 +1079,42 @@ header main .product__down i {
     font-weight: 400;
     font-size: 127px;
     line-height: 128px;
+  }
+  .card-3 {
+    width: 100%;
+    background-color: #f1ebe4;
+    padding: 0 33px 20px 33px;
+  }
+  .card-3 h3 {
+    font-family: "DM Sans";
+    font-style: normal;
+    font-weight: 400;
+    font-size: 45px;
+    line-height: 50px;
+    text-transform: uppercase;
+  }
+  .c-3__content {
+    display: flex;
+    margin-top: 62px;
+    gap: 35px;
+    text-align: center;
+  }
+  .c-3__content-chaild {
+    width: 100%;
+    height: 400px;
+    background-color: rgb(176, 98, 249);
+  }
+  .c-3__content-chaild img {
+    width: 100%;
+  }
+
+  .c-3__content-chaild p {
+    font-family: "DM Sans";
+    font-style: normal;
+    font-weight: 400;
+    font-size: 32px;
+    line-height: 48px;
+    text-transform: uppercase;
+    transform: translateY(30px);
   }
 }
